--- a/notebooks/01_ingest_data.ipynb
+++ b/notebooks/01_ingest_data.ipynb
@@ -1,251 +1,214 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "181fe32e",
-   "metadata": {
-    "name": "license"
-   },
-   "source": [
-    "Copyright 2026 Snowflake Inc.\n",
-    "\n",
-    "SPDX-License-Identifier: Apache-2.0\n",
-    "\n",
-    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "you may not use this file except in compliance with the License.\n",
-    "You may obtain a copy of the License at\n",
-    "\n",
-    "http://www.apache.org/licenses/LICENSE-2.0\n",
-    "\n",
-    "Unless required by applicable law or agreed to in writing, software\n",
-    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "See the License for the specific language governing permissions and\n",
-    "limitations under the License."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "1c058af3",
+      "metadata": {
+        "name": "license"
+      },
+      "source": [
+        "> **Copyright 2026 Snowflake Inc.**  \n",
+        "> SPDX-License-Identifier: Apache-2.0  \n",
+        ">  \n",
+        "> Licensed under the Apache License, Version 2.0 (the \"License\");  \n",
+        "> you may not use this file except in compliance with the License.  \n",
+        "> You may obtain a copy of the License at [http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0)  \n",
+        ">  \n",
+        "> Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bfddb1f6",
+      "metadata": {
+        "name": "md_overview"
+      },
+      "source": [
+        "# MONAI Lung CT Registration - Data Ingestion\n",
+        "\n",
+        "This notebook downloads the **Learn2Reg Challenge** lung CT dataset and uploads it to Snowflake internal stages.\n",
+        "\n",
+        "## Dataset Overview\n",
+        "- **Source**: [Learn2Reg Challenge - CT Lung Registration](https://zenodo.org/record/3835682)\n",
+        "- **Data**: Paired inspiratory and expiratory lung CT scans with segmentation masks\n",
+        "- **Format**: NIfTI (.nii.gz) 3D medical images\n",
+        "- **License**: CC BY 4.0\n",
+        "\n",
+        "## Workflow\n",
+        "1. Download training data from Zenodo\n",
+        "2. Extract paired CT scans and lung masks\n",
+        "3. Upload to Snowflake internal stages organized by type"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f67a1270",
+      "metadata": {
+        "language": "python",
+        "name": "install_dependencies"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install monai"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "afb8d18c",
+      "metadata": {
+        "language": "python",
+        "name": "initialize_session"
+      },
+      "outputs": [],
+      "source": [
+        "from snowflake.snowpark.context import get_active_session\n",
+        "from monai.apps import download_and_extract\n",
+        "import os\n",
+        "\n",
+        "session = get_active_session()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6c09475e",
+      "metadata": {
+        "name": "md_step1_session"
+      },
+      "source": [
+        "## Step 1: Initialize Snowflake Session"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5edb0a8d",
+      "metadata": {
+        "language": "python",
+        "name": "verify_connection"
+      },
+      "outputs": [],
+      "source": [
+        "session.sql(\"select current_user()\").collect()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a0bd7d46",
+      "metadata": {
+        "name": "md_step2_temp_dir"
+      },
+      "source": [
+        "## Step 2: Setup Temporary Directory"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e73da8a3",
+      "metadata": {
+        "language": "python",
+        "name": "setup_temp_directory"
+      },
+      "outputs": [],
+      "source": [
+        "import tempfile\n",
+        "\n",
+        "directory = '/tmp'\n",
+        "if directory is not None:\n",
+        "    os.makedirs(directory, exist_ok=True)\n",
+        "root_dir = tempfile.mkdtemp() if directory is None else directory\n",
+        "print(root_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7b5700fd",
+      "metadata": {
+        "name": "md_step3_download"
+      },
+      "source": [
+        "## Step 3: Download Dataset from Zenodo\n",
+        "\n",
+        "Downloads ~1.2GB of paired lung CT scans from the Learn2Reg Challenge."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b7cbfcfa",
+      "metadata": {
+        "language": "python",
+        "name": "download_data"
+      },
+      "outputs": [],
+      "source": [
+        "resource = \"https://zenodo.org/record/3835682/files/training.zip\"\n",
+        "\n",
+        "compressed_file = os.path.join(root_dir, \"paired_ct_lung.zip\")\n",
+        "data_dir = os.path.join(root_dir, \"paired_ct_lung\")\n",
+        "if not os.path.exists(data_dir):\n",
+        "    download_and_extract(resource, compressed_file, root_dir)\n",
+        "    os.rename(os.path.join(root_dir, \"training\"), data_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "091b1580",
+      "metadata": {
+        "name": "md_step4_upload"
+      },
+      "source": [
+        "## Step 4: Upload to Snowflake Stages\n",
+        "\n",
+        "Uploads the medical images to internal stages:\n",
+        "- `@sf_clinical_medical_images_stg/lungMasksExp` - Expiratory lung masks\n",
+        "- `@sf_clinical_medical_images_stg/lungMasksInsp` - Inspiratory lung masks  \n",
+        "- `@sf_clinical_medical_images_stg/scansExp` - Expiratory CT scans\n",
+        "- `@sf_clinical_medical_images_stg/scansInsp` - Inspiratory CT scans"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fd4ddb5d",
+      "metadata": {
+        "language": "python",
+        "name": "upload_to_stages"
+      },
+      "outputs": [],
+      "source": [
+        "session.use_database(\"SF_CLINICAL_DB\")\n",
+        "session.use_schema(\"UTILS\")\n",
+        "\n",
+        "\n",
+        "session.file.put(f\"{data_dir}/lungMasks/*exp.nii.gz\", \"@sf_clinical_medical_images_stg/lungMasksExp\", overwrite=True)\n",
+        "session.file.put(f\"{data_dir}/lungMasks/*insp.nii.gz\", \"@sf_clinical_medical_images_stg/lungMasksInsp\", overwrite=True)\n",
+        "session.file.put(f\"{data_dir}/scans/*exp.nii.gz\", \"@sf_clinical_medical_images_stg/scansExp\", overwrite=True)\n",
+        "session.file.put(f\"{data_dir}/scans/*insp.nii.gz\", \"@sf_clinical_medical_images_stg/scansInsp\", overwrite=True)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "py_spcs",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "overview"
-   },
-   "source": [
-    "# MONAI Lung CT Data Ingestion\n",
-    "\n",
-    "This notebook downloads paired lung CT scans from a public dataset and uploads them to Snowflake stages.\n",
-    "\n",
-    "## Overview\n",
-    "- **Data Source**: Zenodo paired lung CT dataset (~266MB)\n",
-    "- **Format**: NIfTI (.nii.gz) medical imaging format\n",
-    "- **Destination**: Encrypted Snowflake stages\n",
-    "\n",
-    "## Workflow\n",
-    "1. **Install Dependencies** - Install MONAI library\n",
-    "2. **Initialize Session** - Connect to Snowflake\n",
-    "3. **Download Data** - Fetch paired CT scans from Zenodo\n",
-    "4. **Upload to Stages** - Store in encrypted Snowflake stages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "step1_install"
-   },
-   "source": [
-    "## Step 1: Install MONAI\n",
-    "\n",
-    "Install the MONAI (Medical Open Network for AI) library for downloading medical imaging datasets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "install_monai"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install monai"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "step2_session"
-   },
-   "source": [
-    "## Step 2: Initialize Snowflake Session\n",
-    "\n",
-    "Connect to Snowflake and configure the session with query tags for tracking."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "init_session"
-   },
-   "outputs": [],
-   "source": [
-    "from snowflake.snowpark.context import get_active_session\n",
-    "from monai.apps import download_url, download_and_extract\n",
-    "import os\n",
-    "\n",
-    "# Get active session (automatically available in Container Runtime notebooks)\n",
-    "session = get_active_session()\n",
-    "\n",
-    "# Set query tag for consumption tracking\n",
-    "session.query_tag = '{\"origin\":\"sf_sit-is\",\"name\":\"distributed_medical_image_processing_with_monai\",\"version\":{\"major\":1,\"minor\":0},\"attributes\":{\"is_quickstart\":1,\"source\":\"notebook\"}}'\n",
-    "\n",
-    "# Database name - matches setup.sql\n",
-    "DATABASE_NAME = \"MONAI_DB\"\n",
-    "print(f\"\u2705 Using database: {DATABASE_NAME}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "step3_download"
-   },
-   "source": [
-    "## Step 3: Download Paired Lung CT Scans\n",
-    "\n",
-    "Download the paired lung CT dataset from Zenodo. This dataset contains:\n",
-    "- **Scans**: CT images at inspiration and expiration phases\n",
-    "- **Lung Masks**: Segmentation masks for the lung regions\n",
-    "\n",
-    "The download is approximately **266MB** and may take a few minutes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "setup_directory"
-   },
-   "outputs": [],
-   "source": [
-    "import tempfile\n",
-    "\n",
-    "directory = '/tmp'\n",
-    "if directory is not None:\n",
-    "    os.makedirs(directory, exist_ok=True)\n",
-    "root_dir = tempfile.mkdtemp() if directory is None else directory\n",
-    "print(f\"\ud83d\udcc1 Working directory: {root_dir}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "download_data"
-   },
-   "outputs": [],
-   "source": [
-    "resource = \"https://zenodo.org/record/3835682/files/training.zip\"\n",
-    "\n",
-    "compressed_file = os.path.join(root_dir, \"paired_ct_lung.zip\")\n",
-    "data_dir = os.path.join(root_dir, \"paired_ct_lung\")\n",
-    "if not os.path.exists(data_dir):\n",
-    "    download_and_extract(resource, compressed_file, root_dir)\n",
-    "    os.rename(os.path.join(root_dir, \"training\"), data_dir)\n",
-    "    print(f\"\u2705 Downloaded and extracted to: {data_dir}\")\n",
-    "else:\n",
-    "    print(f\"\ud83d\udcc2 Data already exists at: {data_dir}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "step4_upload"
-   },
-   "source": [
-    "## Step 4: Upload to Snowflake Stages\n",
-    "\n",
-    "Upload the NIfTI files to encrypted Snowflake stages. The files are organized as:\n",
-    "- `lungMasksExp/` - Expiration lung masks\n",
-    "- `lungMasksInsp/` - Inspiration lung masks  \n",
-    "- `scansExp/` - Expiration CT scans\n",
-    "- `scansInsp/` - Inspiration CT scans\n",
-    "\n",
-    "All files are stored with **Snowflake Server-Side Encryption (SSE)**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "upload_to_stages"
-   },
-   "outputs": [],
-   "source": [
-    "session.use_database(DATABASE_NAME)\n",
-    "session.use_schema(\"UTILS\")\n",
-    "\n",
-    "print(\"\ud83d\udce4 Uploading lung masks (expiration)...\")\n",
-    "session.file.put(f\"{data_dir}/lungMasks/*exp.nii.gz\", \"@monai_medical_images_stg/lungMasksExp\", overwrite=True)\n",
-    "\n",
-    "print(\"\ud83d\udce4 Uploading lung masks (inspiration)...\")\n",
-    "session.file.put(f\"{data_dir}/lungMasks/*insp.nii.gz\", \"@monai_medical_images_stg/lungMasksInsp\", overwrite=True)\n",
-    "\n",
-    "print(\"\ud83d\udce4 Uploading CT scans (expiration)...\")\n",
-    "session.file.put(f\"{data_dir}/scans/*exp.nii.gz\", \"@monai_medical_images_stg/scansExp\", overwrite=True)\n",
-    "\n",
-    "print(\"\ud83d\udce4 Uploading CT scans (inspiration)...\")\n",
-    "session.file.put(f\"{data_dir}/scans/*insp.nii.gz\", \"@monai_medical_images_stg/scansInsp\", overwrite=True)\n",
-    "\n",
-    "print(\"\u2705 All files uploaded to @monai_medical_images_stg\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "name": "next_steps"
-   },
-   "source": [
-    "## Data Ingestion Complete!\n",
-    "\n",
-    "The paired lung CT scans are now stored in Snowflake stages.\n",
-    "\n",
-    "### Verify Upload\n",
-    "Run the cell below to list the uploaded files.\n",
-    "\n",
-    "### Next Steps\n",
-    "Proceed to **02_model_training** to train the registration model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "name": "verify_upload"
-   },
-   "outputs": [],
-   "source": [
-    "# List uploaded files\n",
-    "session.sql(\"LIST @monai_medical_images_stg\").show()"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "py_spcs",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
